# FS-Searcher

./: CMakeLists.txt
abgabe/: Makefile  myfind.cpp
myfind/: CMakeLists.txt  myfind.cpp
